<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Impromptu</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_quit">Quit Application</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_appEngine">Loading App . . .</string>
    <string name="title_clear_cache">Clear Cache</string>
    <string name="title_debug">Dev Tools</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_camera">Snap-To-It</string>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="title_activity_debug">Developer Tools</string>
    <string name="title_activity_show_web_view">ShowWebView</string>
    <string name="title_activity_problem_report">Problem Reporter</string>

    <!-- Snap-To-It -->
    <string name="title_activity_snap_to_it">Snap-To-It</string>
    <string name="sti_instruction">Tips</string>
    <string name="sti_tips_1">&#8226; Take the photo from the front of the appliance</string>
    <string name="sti_tips_2">&#8226; Make sure the appliance is in the center of the box</string>
    <string name="sti_tips_3">&#8226; Take photos in portrait view</string>
    <string name="sti_tips_4">&#8226; Check to see if your compass is calibrated (use nearby posters)</string>
    <string name="sti_camera">TAKE PHOTO</string>
    <string name="sti_qr">QR</string>
    <string name="sti_text">TEXT</string>

    <!-- CreationFest (Remove Someday) -->
    <string-array name="departments">
        <item>Public Safety</item>
        <item>Medical</item>
        <item>Arena Security</item>
        <item>Artist Booth</item>
        <item>Artist Merchandise</item>
        <item>Back Gates</item>
        <item>Children\'s Ministry</item>
        <item>Creation T-Shirts</item>
        <item>Deaf Ministry</item>
        <item>Flex Crew</item>
        <item>Fringe/HM Crew</item>
        <item>Front Gates</item>
        <item>Game Zone</item>
        <item>Gates Traffic</item>
        <item>Grocery Store</item>
        <item>Grounds Traffic</item>
        <item>Group Campsite Usher</item>
        <item>Ham Radio</item>
        <item>Hospitality</item>
        <item>Ice Sales</item>
        <item>Individual Campsite Usher</item>
        <item>Kitchen</item>
        <item>Lost and Found</item>
        <item>Medical</item>
        <item>Music Contest</item>
        <item>Music Store</item>
        <item>Office</item>
        <item>Prayer Tent</item>
        <item>Press</item>
        <item>Public Safety</item>
        <item>Setup</item>
        <item>Staff Office</item>
        <item>Stage Crew</item>
        <item>Stage/Fringe Security</item>
        <item>Tear-Down</item>
        <item>Technical Service</item>
        <item>Transportation</item>
    </string-array>

    <string name="title_activity_qrcode">QRCodeActivity</string>

</resources>
