<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.adefreitas.gcfimpromptu.SnapToItActivity" >

    <!-- TOOLBAR -->
	<android.support.v7.widget.Toolbar
	    xmlns:app="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/toolbar"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    app:theme="@style/Theme.MyTheme"
	    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
	    android:background="#FFFFFF"/>
	
	<View 
		android:layout_width="fill_parent" 
		android:layout_height="2dp" 
		android:background="#333333" />
    
    <!-- CAMERA -->
	<ScrollView
	    android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:orientation="vertical" >
	        	        
	        <!-- Hosts the Camera -->
	        <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        
	        	<TextView
		            android:id="@+id/txt_compass"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:background="#333333"
		            android:gravity="center"
		            android:padding="5dp"
		            android:textColor="#FFFFFF" />
	        	
	        	<RelativeLayout
		            android:id="@+id/layoutCamera"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content">
		            	            
		            <SurfaceView
		                android:id="@+id/surface_camera"
		                android:layout_width="fill_parent"
		                android:layout_height="200dp" />
	
		            <RelativeLayout
		                android:layout_width="fill_parent"
		                android:layout_height="200dp"
		                android:paddingBottom="40dp"
		                android:paddingLeft="60dp"
		                android:paddingRight="60dp"
		                android:paddingTop="40dp" >
	
		                <TextView
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center"
		                    android:layout_centerInParent="true"
		                    android:padding="3dp"
		                    android:textColor="#FFFFFF"
		                    android:textSize="18sp"
		                    android:text="+"/>
	
		                <ImageView
		                    android:layout_width="fill_parent"
		                    android:layout_height="fill_parent"
		                    android:src="@drawable/reticle" />
		            </RelativeLayout>
		        </RelativeLayout>
	        </LinearLayout>
	        
			<!-- Tips -->
	        <LinearLayout
				android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
		    	
		    	<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:textSize="14sp"
			        android:text="@string/sti_instruction"
			        android:textColor="@color/custom_primary" />
	
		    	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textSize="12sp" android:text="@string/sti_tips_1" android:textColor="#000000" />
		        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textSize="12sp" android:text="@string/sti_tips_2" android:textColor="#000000" />
		        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textSize="12sp" android:text="@string/sti_tips_3" android:textColor="#000000" />
		        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textSize="12sp" android:text="@string/sti_tips_4" android:textColor="#000000" />    		        
		    </LinearLayout>
	        
	        <!-- Camera Photo Button -->
	        <Button
		    	android:id="@+id/btnCamera"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:background="#333333"
		        android:text="@string/sti_camera"
		        android:textColor="#FFFFFF" />
	        
	        <!-- Onboarding Tool -->
	        <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:orientation="vertical">
	        
	            <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="10dp"
		            android:text="Appliance Name"
		            android:textColor="@color/custom_primary" />

		        <EditText
		            android:id="@+id/txtObject"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:gravity="top"
		            android:windowSoftInputMode="stateHidden"
		            android:textColor="#333333" />
	        </LinearLayout>
	        
	    </LinearLayout>
	</ScrollView>
	
</LinearLayout>
